test/errors/list/insert_bad_value_type.np
l = [1]
l.insert(0, "two")
